hphp/test/slow/php7_bcbreak/5/uvs/static_dim_call.php.expectf

Fatal error: Encountered unexpected text `$bar['baz']`, was expecting a static property or method name. in %s/php7_bcbreak/5/uvs/static_dim_call.php on line 15
